--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,12 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.2.18",
-    "json3": "~3.3.1",
-    "es5-shim": "~3.1.0",
     "bootstrap-sass-official": "~3.1.1",
-    "angular-resource": "1.2.18",
     "angular-cookies": "1.2.18",
-    "angular-sanitize": "1.2.18",
     "angular-animate": "1.2.18",
     "angular-touch": "1.2.18",
-    "angular-route": "1.2.18"
+    "angular-route": "1.2.18",
+    "ngstorage": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.18",
